[package]
name = "calendar-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
leptos_icons = "0.3.0"
icondata = "0.3.0"
log = "0.4.20"
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde-wasm-bindgen = "0.6.3"
gloo = "0.11.0"
console_error_panic_hook = "0.1.7"
tracing = "0.1.40"
tracing-wasm = "0.2.1"
js-sys = "0.3.66"
wasm-bindgen = { version="0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
wasm-bindgen-console-logger = "0.1.1"
web-sys = { version = "0.3.66", features = ["Window", "AddEventListenerOptions", "HtmlElement", "ScrollToOptions", "ScrollBehavior"] }
gloo-net = "0.5.0"
chrono = "0.4"
chinese-lunisolar-calendar = "0.2.0"